02-introduction-to-service-mesh/service-envoy.yaml
---
static_resources:
  listeners:
    - address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains: ['*']
                      routes:
                        - match:
                            prefix: '/greeting'
                          route:
                            cluster: greeting_service
                http_filters:
                  - name: envoy.router
  clusters:
    - name: greeting_service
      connect_timeout: '0.25s'
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: greeting_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # Start our docker container locally.
                      # $ docker run -p 5000:5000 alextanhongpin/python:5.0
                      # This can be obtained from docker.
                      # $ docker network inspect bridge | grep Gateway
                      address: 172.17.0.1
                      port_value: 5000
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 8081 }
